# mono-hs-binding-test

./: monotest.cabal
app/: Main.hs  Mono.chs
